--- a/pages/community/community.wxss
+++ b/pages/community/community.wxss
@@ -1,1 +1,140 @@
 /* pages/community/community.wxss */
+
+.community-page {
+    background-color: #B7B8E6;
+  }
+  
+  .search-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  
+  .search-icon-left {
+    width: 35px;
+    height: 35px;
+  }
+  
+  .search-input {
+    flex: 1;
+    margin: 0 10px;
+    padding: 7px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .search-icon-right {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .scroll-line {
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+  }
+  
+  .bottom-navigation {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #FFFFFF;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+  }
+  
+  .navigation-item {
+    font-size: 14px;
+    color: #000000;
+  }
+  
+  .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    flex-direction: column;
+  }
+  
+  .post-card {
+    width: 250px; /* Adjust the width as needed for smaller cards */
+    background-color: lightgrey;
+    border: 1px solid rgb(84, 90, 106);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    margin-right: 10px; /* Add spacing between the cards */
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .avatar {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    background-color: blueviolet;
+    background-image: linear-gradient(to top left, blueviolet, rgb(73, 31, 112));
+  }
+  
+  .title {
+    font-size: 16px; /* Adjust the font size as needed */
+    line-height: 18px; /* Adjust the line height as needed */
+    font-weight: 600;
+    margin-top: 10px;
+    color: blueviolet;
+    text-decoration: none;
+    transition: all .35s ease-in;
+  }
+  
+  .title:hover {
+    text-decoration: underline blueviolet;
+  }
+  
+  .datetime {
+    font-size: 12px;
+    color: grey;
+    margin: 5px 0;
+  }
+  
+  .image-preview {
+    flex: 1;
+    min-height: 100px; /* Adjust the height as needed */
+    border-radius: 20px;
+    background-color: blueviolet;
+    background-image: linear-gradient(to top left, blueviolet, rgb(73, 31, 112));
+    margin-bottom: 4px;
+  }
+  
+  .comment-like {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2px 0;
+  }
+  
+  .comment-like span {
+    cursor: pointer;
+    height: 30px; /* Adjust the height as needed */
+    width: 40px; /* Adjust the width as needed */
+    padding: 0 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 900;
+    border-radius: 10px;
+    background-color: transparent;
+    transition: all .15s ease;
+  }
+ 
+  .comment-like span:hover {
+    background-color: rgba(137, 43, 226, 0.096);
+  }
+  
+  .comment-like span svg {
+    fill: rgb(255, 255, 255);
+    margin-right: 2px;
+  }
+  
