--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -60,4 +60,19 @@
     <text>积分攻略</text>
   </view>
 </view>
+
+<view class="bottom-navigation">
+    <navigator url="/pages/home_page/home_page">
+      <view class="navigation-item">首页</view>
+    </navigator>
+    <navigator url="/pages/store/store">
+      <view class="navigation-item">商城</view>
+    </navigator>
+    <navigator url="/pages/community/community">
+      <view class="navigation-item">社区</view>
+    </navigator>
+    <navigator url="/pages/mine/mine">
+      <view class="navigation-item">我的</view>
+    </navigator>
+  </view>
 </view>
